MuscleMate/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
/*:root {
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}*/
:root {
  --ifm-color-primary: #35d900;
  --ifm-color-primary-dark: #15b920;
  --ifm-color-primary-darker: #05a920;
  --ifm-color-primary-darkest: #009960;
  --ifm-color-primary-light: #35d910;
  --ifm-color-primary-lighter: #45e900;
  --ifm-color-primary-lightest: #55ff33;

  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #35d900;
  --ifm-color-primary-dark: #20c320;
  --ifm-color-primary-darker: #1db830;
  --ifm-color-primary-darkest: #009810;
  --ifm-color-primary-light: #3aef00;
  --ifm-color-primary-lighter: #3dfa00;
  --ifm-color-primary-lightest: #53ff1b;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.hero p {
  font-size: 1.4rem;
}

.hero .icon {
  display: inline-block;
  background-color: var(--ifm-color-primary);
  padding: 0.5rem;
  border-radius: 50%;
  aspect-ratio: 1/1;
  height: fit-content;
}

.hero .icon svg {
  /* margin: 1.5rem; */
}

